// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`composeTaskIntoGhIssues given: [case1] task in QUEUED status when: [t0] composed into gh.issues format then: matches snapshot 1`] = `
{
  "body": "🦫🎙️   dispatch to foreman
\`\`\`
💧 task enqueued
   ├─ priority = ?
   ├─ yieldage = ?
   └─ leverage = ?
\`\`\`
**title**
fix flaky test
**description**
timeout in ci needs attention",
  "title": "🎙️ task - fix flaky test",
}
`;

exports[`composeTaskIntoGhIssues given: [case2] task in CLAIMED status with branch when: [t0] composed into gh.issues format then: matches snapshot 1`] = `
{
  "body": "🦫🎙️   dispatch to foreman

\`\`\`
💧 task enqueued
   ├─ priority = ?
   ├─ yieldage = ?
   └─ leverage = ?
\`\`\`

🌲 tree planted at foreman/fix-flaky-test

**title**

fix flaky test

**description**

timeout in ci needs attention",
  "title": "🎙️ task - fix flaky test",
}
`;

exports[`composeTaskIntoGhIssues given: [case3] task in DELIVERED status with branch when: [t0] composed into gh.issues format then: matches snapshot 1`] = `
{
  "body": "🦫🎙️   dispatch to foreman

\`\`\`
💧 task enqueued
   ├─ priority = ?
   ├─ yieldage = ?
   └─ leverage = ?
\`\`\`

🌲 tree delivered at foreman/fix-flaky-test

**title**

fix flaky test

**description**

timeout in ci needs attention",
  "title": "🎙️ task - fix flaky test",
}
`;
